2003-02-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ClockCmd.java (GetDate):
	Work around bug in JDK's Calendar implementation
	by adding whole days instead of a days worth
	of seconds. This allows the two failing test
	cases in clock.test to pass, these tests dealt
	with daylight savings time issues.

2003-02-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileCmd.java (copyRenameOneFile):
	Check for case where a directory cannot be renamed
	because the target dir contains a file. Raise
	a EEXIST error in this case. This gets a number
	of test cases in tests/jacl/FileCmd.test to pass.

2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
	Add unimplemented command stubs for channels,
	link, normalize, separator, and system
	subcommands.
	* src/jacl/tcl/lang/FileUtil.java (doTildeSubst):
	Search for env(HOME) in the global variable table.
	* tests/defs: Add testchmod implementation for UNIX.
	* tests/jacl/FileCmd.test: Rework tests to match
	Tcl 8.4 and current Jacl implementation.

2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tclblend/loading.test: Rework a couple
	of tests to make errors showing up under JDK 1.4
	more clear. Remove core file if there is one.

2003-01-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FormatCmd.java (cmdProc, cvtStrToStr):
	Fixup failing format test cases that had to do with
	padding with zeros and negative width values.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tclblend/loading.test: Add unimplemented
	constraint so that loading-2.3 is not run.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl: Document shared UNIX/Windows
	build for Jacl.
	* README.tclblend: Document shared UNIX/Windows
	build for Tcl Blend.
	* new_features.txt: Added note about new
	Windows build system.
	* unix/README.jacl: Removed.
	* unix/README.tclblend: Removed.